@@ -1,11 +1,7 @@
 package com.example.demo.newstrend.service;
 
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -14,7 +10,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
-import com.example.demo.ai.newstrend.NewsFilteringAgent;
 import com.example.demo.member.dao.MemberDao;
 import com.example.demo.member.dto.Member;
 import com.example.demo.newstrend.dto.request.NewsAnalysisRequest;
@@ -22,10 +17,9 @@ import com.example.demo.newstrend.dto.request.NewsAnalysisRequest;
 import lombok.extern.slf4j.Slf4j;
 
 /**
- * 뉴스 수집 서비스 (순수 수집만 담당)
- * - 네이버 뉴스 API에서 뉴스 수집
- * - 키워드 기반 필터링
- * - AI 분석이나 저장은 TotalNewsService에서 담당
+ * 직군별 특화 뉴스 수집 서비스
+ * - 10개 직군별로 다른 키워드 세트 적용
+ * - 각 직군의 특성에 맞는 필터링 로직
  */
 @Service
 @Slf4j
@@ -36,14 +30,68 @@ public class NewsCollectorService {
     @Autowired
     private MemberDao memberDao;
 
-    @Autowired
-    private NewsFilteringAgent filteringAgent;
-
     @Value("${naver.api.client-id}")
     private String clientId;
 
     @Value("${naver.api.client-secret}")
     private String clientSecret;
+
+    // ✅ 직군별 키워드 매핑
+    private static final Map<String, List<String>> JOB_GROUP_KEYWORDS = Map.of(
+            "개발", Arrays.asList(
+                    "개발자 채용", "백엔드 채용", "프론트엔드 채용", "풀스택 개발자",
+                    "소프트웨어 엔지니어", "프로그래머", "코딩", "Java", "Python", "React", "Spring"),
+
+            "AI/데이터", Arrays.asList(
+                    "데이터 사이언티스트", "데이터 엔지니어", "AI 개발자", "머신러닝 엔지니어",
+                    "빅데이터", "데이터 분석가", "인공지능", "딥러닝", "ML"),
+
+            "디자인", Arrays.asList(
+                    "UI 디자이너", "UX 디자이너", "웹디자인", "그래픽 디자이너", "프로덕트 디자이너",
+                    "디자인 채용", "포토샵", "피그마", "일러스트", "브랜딩"),
+
+            "기획", Arrays.asList(
+                    "기획자 채용", "서비스 기획", "상품 기획", "사업 기획", "전략 기획",
+                    "기획 업무", "기획 직무", "비즈니스 분석"),
+
+            "PM", Arrays.asList(
+                    "프로덕트 매니저", "프로젝트 매니저", "PM 채용", "PO", "프로덕트 오너",
+                    "애자일", "스크럼", "프로젝트 관리"),
+
+            "마케팅", Arrays.asList(
+                    "마케팅 매니저", "디지털 마케팅", "퍼포먼스 마케팅", "콘텐츠 마케팅",
+                    "브랜드 마케팅", "마케팅 기획", "광고", "SNS 마케팅", "SEO"),
+
+            "영업", Arrays.asList(
+                    "영업 대표", "세일즈", "비즈니스 개발", "B2B 영업", "고객 관리",
+                    "영업 기획", "계정 관리", "Sales"),
+
+            "장성", Arrays.asList( // 경영으로 추정
+                    "경영", "경영관리", "경영기획", "전략", "경영지원", "임원", "관리자"),
+
+            "교육", Arrays.asList(
+                    "교육 기획", "강사", "교육 콘텐츠", "이러닝", "교육 프로그램", "연수", "교육생"),
+
+            "기타", Arrays.asList(
+                    "인사", "총무", "재무", "회계", "법무", "운영", "고객서비스", "품질관리"));
+
+    private static final Map<String, Set<String>> JOB_GROUP_FILTERS = Map.of(
+            "개발", Set.of("개발", "프로그래밍", "코딩", "시스템", "소프트웨어", "앱", "웹", "API"),
+            "AI/데이터", Set.of("데이터", "분석", "AI", "머신러닝", "딥러닝", "빅데이터", "알고리즘"),
+            "디자인", Set.of("디자인", "UI", "UX", "그래픽", "브랜딩", "시각", "창작"),
+            "기획", Set.of("기획", "전략", "분석", "리서치", "컨셉"),
+            "PM", Set.of("관리", "매니저", "리드", "PM", "프로젝트", "제품"),
+            "마케팅", Set.of("마케팅", "광고", "프로모션", "브랜드", "고객", "캠페인"),
+            "영업", Set.of("영업", "세일즈", "판매", "고객", "계약", "B2B", "B2C"),
+            "장성", Set.of("경영", "관리", "전략", "임원", "리더십"),
+            "교육", Set.of("교육", "강의", "연수", "학습", "강사"),
+            "기타", Set.of("인사", "총무", "재무", "회계", "법무", "운영", "지원"));
+
+    // 공통 제외 키워드
+    private static final Set<String> COMMON_EXCLUDE_KEYWORDS = Set.of(
+            "운전", "배달", "서빙", "매장", "판매원", "아르바이트", "알바",
+            "카페", "식당", "마트", "편의점", "주유소", "택시", "버스",
+            "건설", "제조", "생산", "공장", "청소", "경비");
 
     public NewsCollectorService(WebClient.Builder webClientBuilder) {
         this.webClient = webClientBuilder
@@ -51,24 +99,6 @@ public class NewsCollectorService {
                 .build();
     }
 
-    // 기본 검색 키워드 목록
-    private static List<String> DEFAULT_KEYWORDS = Arrays.asList(
-
-            "AI 개발자",
-            "백엔드 채용",
-            "프론트엔드 개발자",
-            "데이터 엔지니어",
-            "클라우드 엔지니어",
-            "풀스택 개발자",
-            "DevOps",
-            "취업 트렌드");
-
-    /**
-     * 네이버 뉴스 검색
-     * 
-     * @param keyword 검색 키워드
-     * @return JSON 형식의 뉴스 검색 결과
-     */
     public String getNaverNews(String keyword) {
         log.info("네이버 뉴스 검색 - 키워드: {}", keyword);
 
@@ -91,33 +121,42 @@ public class NewsCollectorService {
         return result;
     }
 
-    // 사용자 맞춤 키워드
-    private List<String> basicKeywords(List<String> inputKeywords, Integer memberId) {
+    /**
+     * ✅ 사용자 직군에 맞는 키워드 생성
+     */
+    private List<String> generateJobGroupKeywords(List<String> inputKeywords, Integer memberId) {
         List<String> keywords = new ArrayList<>();
-        // 입력된 키워드 있으면 추가
+
+        // 1. 입력된 키워드 추가
         if (inputKeywords != null && !inputKeywords.isEmpty()) {
             keywords.addAll(inputKeywords);
         }
-        // 사용자 직무/ 직군 기반 키워드 추가
+
+        // 2. 사용자 직군별 키워드 추가
         if (memberId != null) {
             Member member = memberDao.findById(memberId);
+            if (member != null && member.getJobGroup() != null) {
+                String jobGroup = member.getJobGroup();
 
-            if (member != null) {
-                if (member.getJobGroup() != null) {
-                    keywords.add(member.getJobGroup() );
-                }
-                if (member.getJobRole() != null) {
-                    keywords.add(member.getJobRole() );
+                // 직군별 특화 키워드 추가
+                List<String> jobKeywords = JOB_GROUP_KEYWORDS.get(jobGroup);
+                if (jobKeywords != null) {
+                    keywords.addAll(jobKeywords);
+                    log.info("직군 '{}' 키워드 {}개 추가", jobGroup, jobKeywords.size());
+                } else {
+                    log.warn("매핑되지 않은 직군: {}", jobGroup);
+                    // 기본 키워드 추가
+                    keywords.addAll(Arrays.asList(jobGroup + " 채용", jobGroup + " 모집"));
                 }
             }
         }
-        // 유저 직군 직무로 부터 만든 키워드 없으면 기본 키워드사용
+
+        // 3. 키워드가 없으면 개발 직군 기본값 사용
         if (keywords.isEmpty()) {
-            keywords.addAll(DEFAULT_KEYWORDS);
+            keywords.addAll(JOB_GROUP_KEYWORDS.get("개발"));
         }
 
-        return keywords.stream().distinct().toList(); // 중복 제거
-
+        return keywords.stream().distinct().collect(Collectors.toList());
     }
 
     /**
@@ -130,57 +169,145 @@ public class NewsCollectorService {
     public List<NewsAnalysisRequest> collectNews(List<String> keywords, Integer memberId) throws Exception {
         log.info("뉴스 수집 시작 - 키워드: {}, memberId: {}", keywords, memberId);
 
-        List<String> firstKeywords = basicKeywords(keywords, memberId);
+        List<String> jobGroupKeywords = generateJobGroupKeywords(keywords, memberId);
         int filteredCount = 0;
         int errorCount = 0;
 
-        // 중복 제거를 위한 Map (sourceUrl을 키로 사용)
+        // 사용자 직군 파악
+        String userJobGroup = "개발"; // 기본값
+        if (memberId != null) {
+            Member member = memberDao.findById(memberId);
+            if (member != null && member.getJobGroup() != null) {
+                userJobGroup = member.getJobGroup();
+            }
+        }
+
         Map<String, NewsAnalysisRequest> uniqueNewsMap = new HashMap<>();
 
-        // 1. 각 키워드별로 뉴스 수집
-        for (String keyword : firstKeywords) {
-            log.debug("키워드 '{}' 검색 시작", keyword);
+        // 각 키워드별로 뉴스 수집
+        for (String keyword : jobGroupKeywords) {
             try {
-                // 1-1. 네이버 뉴스 수집
                 String naverResponse = getNaverNews(keyword);
                 List<NewsAnalysisRequest> naverNews = parseNaverNews(naverResponse);
-                log.debug("네이버 뉴스 {}건 수집: {}", naverNews.size(), keyword);
 
-                // Map에 추가 (중복 제거)
                 for (NewsAnalysisRequest news : naverNews) {
                     if (!uniqueNewsMap.containsKey(news.getSourceUrl())) {
-                        log.info("필터링 검사 대상: 제목='{}', 내용='{}'",
-                                news.getTitle(),
-                                news.getContent().substring(0, Math.min(50, news.getContent().length())));
 
-                        boolean isRelevant = isJobRelated(news.getTitle());
-
-                        if (isRelevant) {
-                            // memberId 설정
+                        // ✅ 직군별 특화 필터링
+                        if (isJobGroupRelated(news.getTitle(), news.getContent(), userJobGroup)) {
                             news.setMemberId(memberId != null ? memberId : 1);
                             uniqueNewsMap.put(news.getSourceUrl(), news);
-                            log.debug("관련성 있는 뉴스 추가: {}", news.getTitle());
+                            log.debug("'{}' 직군 관련 뉴스 추가: {}", userJobGroup, news.getTitle());
                         } else {
                             filteredCount++;
-                            log.debug("관련성 없는 뉴스 필터링: {}", news.getTitle());
+                            log.debug("'{}' 직군과 무관한 뉴스 필터링: {}", userJobGroup, news.getTitle());
                         }
                     }
                 }
-                // API 호출 제한을 위한 대기
+
                 Thread.sleep(500);
 
             } catch (Exception e) {
-                log.warn("네이버 뉴스 수집 실패: {}", keyword, e);
+                log.warn("키워드 '{}' 수집 실패", keyword, e);
                 errorCount++;
             }
         }
 
         List<NewsAnalysisRequest> collectedNews = new ArrayList<>(uniqueNewsMap.values());
-        
-        log.info("뉴스 수집 완료 - 수집: {}건, 필터링 제외: {}건, 최종: {}건, 오류: {}건",
-                uniqueNewsMap.size() + filteredCount, filteredCount, collectedNews.size(), errorCount);
+
+        log.info("'{}' 직군 뉴스 수집 완료 - 수집: {}건, 필터링 제외: {}건, 최종: {}건, 오류: {}건",
+                userJobGroup, uniqueNewsMap.size() + filteredCount, filteredCount, collectedNews.size(), errorCount);
 
         return collectedNews;
+    }
+
+    /**
+     * 키워드 리스트로 네이버 뉴스 검색 (단순 검색, 저장 안함)
+     * 
+     * @param keywords        검색할 키워드 리스트
+     * @param limitPerKeyword 각 키워드당 가져올 기사 수
+     * @return 기사 제목, URL, 설명이 담긴 리스트
+     */
+    public List<Map<String, String>> searchNewsByKeywords(List<String> keywords, int limitPerKeyword) {
+
+        log.info("키워드 기반 뉴스 검색 시작 - 키워드: {}, limit: {}", keywords, limitPerKeyword);
+        // 검색 시작 로그 출력 (디버깅 및 모니터링용)
+
+        List<Map<String, String>> results = new ArrayList<>();
+        // 최종적으로 반환할 뉴스 목록 저장 리스트
+
+        Set<String> addedUrls = new HashSet<>();
+        // 이미 추가한 뉴스 URL을 저장해서 중복 방지
+
+        for (String keyword : keywords) {
+            // 전달받은 키워드를 하나씩 반복하며 검색
+
+            try {
+
+                String naverResponse = getNaverNews(keyword);
+                // 네이버 뉴스 API 호출하여 JSON 응답(String)을 받아옴
+
+                JSONObject json = new JSONObject(naverResponse);
+                // 받아온 JSON 문자열을 실제 JSON 객체로 변환
+
+                JSONArray items = json.getJSONArray("items");
+                // JSON에서 "items" 배열 꺼냄 → 뉴스 목록
+
+                int added = 0;
+                // 한 키워드당 limitPerKeyword 개수만큼만 가져가기 위해 카운트 변수 선언
+
+                for (int i = 0; i < items.length() && added < limitPerKeyword; i++) {
+                    // items 배열을 순회하지만 limit 개수만큼까지만 처리
+
+                    JSONObject item = items.getJSONObject(i);
+                    // 현재 뉴스 아이템(JSON) 가져오기
+
+                    String url = item.optString("link", "");
+                    // 뉴스 링크(URL) 추출, 없으면 빈 문자열
+
+                    if (!addedUrls.contains(url)) {
+                        // 이미 추가한 뉴스(URL)인지 체크
+
+                        Map<String, String> article = new HashMap<>();
+                        // 결과에 담을 뉴스 정보를 저장할 Map 생성
+
+                        article.put("title", cleanHtml(item.optString("title", "")));
+                        // 제목 추출 + HTML 태그 제거
+
+                        article.put("description", cleanHtml(item.optString("description", "")));
+                        // 본문(설명) 추출 + HTML 태그 제거
+
+                        article.put("url", url);
+                        // 뉴스 원문 URL 저장
+
+                        article.put("keyword", keyword);
+                        // 어떤 키워드로 검색된 뉴스인지 저장
+
+                        results.add(article);
+                        // 최종 결과 리스트에 추가
+
+                        addedUrls.add(url);
+                        // 중복 방지를 위해 URL 기록
+
+                        added++;
+                        // 현재 키워드에서 수집한 뉴스 개수 증가
+                    }
+                }
+
+                Thread.sleep(500);
+                // API 호출 과다 방지를 위한 딜레이(0.5초)
+
+            } catch (Exception e) {
+                log.warn("키워드 '{}' 검색 실패", keyword, e);
+                // API 오류, JSON 오류 등 문제 발생 시 경고 로그 출력
+            }
+        }
+
+        log.info("키워드 기반 뉴스 검색 완료 - {}건 반환", results.size());
+        // 검색 종료 로그 출력
+
+        return results;
+        // 결과 반환
     }
 
     /**
@@ -188,34 +315,57 @@ public class NewsCollectorService {
      * 
      * @param jsonResponse 네이버 API JSON 응답
      * @return 뉴스 요청 목록
+     * item.optString("title") NAVER API 파싱에 필수로 필요한 코드
+        item.optString("description")
+        item.optString("link")
      */
     private List<NewsAnalysisRequest> parseNaverNews(String jsonResponse) {
+    // 네이버 API JSON 응답을 파싱해서 NewsAnalysisRequest 리스트로 변환하는 메서드
+
         List<NewsAnalysisRequest> newsList = new ArrayList<>();
+        // 결과로 반환할 리스트 생성
 
         try {
             JSONObject json = new JSONObject(jsonResponse);
+            // 응답 문자열을 JSON 객체로 변환
+
             JSONArray items = json.getJSONArray("items");
+            // 아이템(뉴스 리스트) 추출
 
             for (int i = 0; i < items.length(); i++) {
+                // items 배열 순회
+
                 JSONObject item = items.getJSONObject(i);
+                // 각 뉴스 객체 가져오기
 
                 NewsAnalysisRequest news = new NewsAnalysisRequest();
-                news.setTitle(cleanHtml(item.optString("title", "")));
-                news.setContent(cleanHtml(item.optString("description", "")));
-                news.setSourceUrl(item.optString("link", ""));
-                news.setSourceName("네이버뉴스");
+                // 파싱한 데이터를 담을 DTO 생성
 
-                // 유효한 뉴스만 추가
-                if (isJobRelated(news.getTitle()) && news.getSourceUrl() != null && !news.getSourceUrl().isEmpty()) {
+                news.setTitle(cleanHtml(item.optString("title", "")));
+                // 제목 추출 + HTML 태그 제거
+
+                news.setContent(cleanHtml(item.optString("description", "")));
+                // 요약 설명 추출 + HTML 태그 제거
+
+                news.setSourceUrl(item.optString("link", ""));
+                // 뉴스 링크(URL)
+
+                news.setSourceName("네이버뉴스");
+                // 출처 이름 고정 입력
+
+                if (news.getSourceUrl() != null && !news.getSourceUrl().isEmpty()) {
+                    // URL이 존재하는 경우에만 정상 뉴스로 간주하고 추가
                     newsList.add(news);
                 }
             }
 
         } catch (Exception e) {
             log.error("네이버 뉴스 파싱 오류", e);
+            // JSON 구조 오류, 키 없음 등 예외 발생 시 로그 출력
         }
 
         return newsList;
+        // 파싱 결과 반환
     }
 
     // /**
@@ -270,25 +420,70 @@ public class NewsCollectorService {
     // return newsList;
     // }
 
-    // 취업 관련 기본 필터링
-
-    private boolean isJobRelated(String title) {
+    /**
+     * ✅ 직군별 특화 관련성 판단
+     */
+    private boolean isJobGroupRelated(String title, String content, String jobGroup) {
         if (title == null)
             return false;
+        // 제목이 없으면 직군 관련성을 판단할 수 없으므로 false 반환
 
-        String[] jobKeywords = {
-                "채용", "구인", "취업", "입사", "개발자", "엔지니어",
-                "프로그래머", "개발", "코딩", "IT", "기술직", "경력직", "신입"
-        };
+        String text = (title + " " + (content != null ? content : "")).toLowerCase();
+        // 제목 + 내용(본문)을 하나의 문자열로 합치고 모두 소문자로 변환해서 비교를 쉽게 만듦
 
-        String lowerTitle = title.toLowerCase();
-        for (String keyword : jobKeywords) {
-            if (lowerTitle.contains(keyword)) {
-                return true;
+        // 1. 공통 제외 키워드 체크
+        for (String excludeKeyword : COMMON_EXCLUDE_KEYWORDS) {
+            if (text.contains(excludeKeyword.toLowerCase())) {
+                return false;
             }
         }
-        return false;
+        // 공통 제외 키워드 목록에 있는 단어가 포함되어 있으면 이 뉴스는 직군과 무관하다고 판단하여 즉시 false
+
+        // 2. 해당 직군 필터링 키워드 점수 계산
+        Set<String> jobFilters = JOB_GROUP_FILTERS.getOrDefault(jobGroup, Set.of());
+        // 직군(jobGroup)별 필터링 키워드 목록을 가져옴. 없으면 빈 Set 반환
+
+        int score = 0;
+        // 관련성 점수를 계산하기 위한 변수
+
+        for (String filter : jobFilters) {
+            if (text.contains(filter.toLowerCase())) {
+                // 뉴스 텍스트에 해당 직군의 필터 단어가 포함되면
+
+                if (title.toLowerCase().contains(filter.toLowerCase())) {
+                    score += 2;
+                } else {
+                    score += 1;
+                }
+                // 제목에 포함되면 가중치 2점, 본문에만 있으면 1점 추가
+            }
+        }
+
+        // 3. 채용 관련 키워드 가산점
+        if (text.matches(".*채용|구인|모집|입사|취업|면접.*")) {
+            score += 2;
+        }
+        // 텍스트 안에 '채용, 구인, 모집, 입사, 취업, 면접' 같은 단어가 있으면 +2점 추가
+        // 즉 "채용 관련 뉴스" 가능성이 있으면 강하게 가산점
+
+        // 4. 직군별 임계점 설정 (개발직군은 더 까다롭게)
+        int threshold = "개발".equals(jobGroup) ? 3 : 2;
+        // 개발 직군이면 임계점을 3점으로 설정해 더 엄격하게,
+        // 그 외 직군은 2점 이상이면 관련된 것으로 판단
+
+        boolean isRelated = score >= threshold;
+        // 최종 점수가 임계값 이상이면 직군 관련 뉴스라고 판단
+
+        log.debug("'{}' 직군 관련성 판단 - 제목: '{}', 점수: {}/{}, 결과: {}",
+                jobGroup,
+                title.length() > 40 ? title.substring(0, 40) + "..." : title,
+                score, threshold, isRelated);
+        // 디버깅용 로그: 어떤 직군으로 평가했는지, 제목 일부, 점수/임계치, 최종결과 출력
+
+        return isRelated;
+        // 최종 판단 결과 반환
     }
+
 
     /**
      * HTML 태그 제거 및 특수 문자 변환
